Kubernetes Selenium Grid

--- a/aws/pl/index.html
+++ b/aws/pl/index.html
@@ -922,7 +922,7 @@
             <section>
                 <h2>Elastic Beanstalk - platformy</h2>
 
-                <ul>
+                <ul style="font-size: 2rem;">
                     <li>Packer Builder</li>
                     <li>Single Container Docker</li>
                     <li>Multicontainer Docker</li>
