--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="docker/">Docker from scratch</a></li>
                 <li><a href="docker&k8s/pl/">Docker & Kubernetes</a></li>
                 <li><a href="js-event-loop/demo">JS Event Loop demos</a></li>
+                <li><a href="k8s-selenium-grid">Kubernetes Selenium Grid</a></li>
             </ul>
         </section>
     </div>
