QR code for demo repository

--- a/k8s-selenium-grid/index.html
+++ b/k8s-selenium-grid/index.html
@@ -310,7 +310,17 @@ $ minikube service --namespace zalenium zalenium
         </section>
 
         <section>
-            <h1>Live demo</h1>
+            <section>
+                <h1>Live demo</h1>
+            </section>
+
+            <section>
+                <h2>Live demo</h2>
+
+                <a href="https://github.com/michailw/protractor-selenium-grid-example">https://bit.ly/2WDWIss</a>
+                <br/>
+                <img src="images/githubRepoUrl-qrcode.png" alt="QRcode link" class="qrCodeLink small"/>
+            </section>
         </section>
 
         <section id="q&a">
