Fixed path to Docker logo | k8s selenium

--- a/k8s-selenium-grid/index.html
+++ b/k8s-selenium-grid/index.html
@@ -239,7 +239,7 @@ $ minikube service --namespace zalenium zalenium
             </section>
 
             <section>
-                <img src="images/Docker%20Horizontal%20Large.png" class="logoImage" />
+                <img src="images/logos/dockerLogo.png" class="logoImage" />
             </section>
 
             <section>
