--- a/k8s-selenium-grid/index.html
+++ b/k8s-selenium-grid/index.html
@@ -64,6 +64,13 @@
         #typed-strings {
             display: none;
         }
+
+        .reveal #costsTable td, .reveal #costsTable th {
+            text-align: center;
+        }
+        .reveal #costsTable td:first-child {
+            text-align: left;
+        }
     </style>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
@@ -340,6 +347,65 @@ $ minikube service --namespace zalenium zalenium
             </section>
         </section>
 
+        <section>
+            <section>
+                <h1>Price comparison</h1>
+            </section>
+
+            <section>
+                <h2>Monthly cost</h2>
+
+                <table style="font-size: 60%;" id="costsTable">
+                    <thead>
+                    <th></th>
+                    <th>
+                        <img src="images/logos/browserstack-logo.png" class="logoImage" style="width:200px;"/>
+                    </th>
+                    <th>
+                        <img src="images/logos/KubernetesLogo.png" class="logoImage" style="width:100px;" /> +
+                        <img src="images/logos/selenium-logo.svg" class="logoImage" style="width:100px;" />
+                        <br/>
+                        <small>(assuming t2.micro instances + 20GB EBS volumes)</small>
+                    </th>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>1 parallel test</td>
+                        <td>$169</td>
+                        <td>
+                            $160<br/>
+                            <small>($140 for Kubernetes stack + $20 for EC2 resources)</small>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>2 parallel tests</td>
+                        <td>$329</td>
+                        <td>
+                            $170<br/>
+                            <small>($140 for Kubernetes stack + $30 for EC2 resources)</small>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>10 parallel tests</td>
+                        <td>$1629</td>
+                        <td>
+                            $230<br/>
+                            <small>($140 for Kubernetes stack + $90 for EC2 resources)</small>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>25 parallel tests</td>
+                        <td>$4039</td>
+                        <td>
+                            $370<br/>
+                            <small>($140 for Kubernetes stack + $230 for EC2 resources)</small>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </section>
+        </section>
+
         <section id="q&a">
             <h1>Questions?</h1>
         </section>
@@ -348,7 +414,7 @@ $ minikube service --namespace zalenium zalenium
             <h1>Thank you for your time!</h1>
             <p>
                 Slides are available on
-                <a href="https://michailw.github.io/talks//k8s-selenium-grid/">https://michailw.github.io/talks/k8s-selenium-grid/</a>
+                <a href="https://michailw.github.io/talks//k8s-selenium-grid/" target="_blank" rel="noopener">https://michailw.github.io/talks/k8s-selenium-grid/</a>
                 <br/>
                 <img src="qrcodeLink.png" alt="QRcode link" class="qrCodeLink small"/>
             </p>
@@ -357,8 +423,8 @@ $ minikube service --namespace zalenium zalenium
 
     <div id="typed-container">
         <div id="typed-strings">
-            <p><a href="https://www.linkedin.com/in/wojtowiczmichal/"><img src="../images/logos/linkedin.png" class="logoImage" style="width:20px; margin-bottom: -4px;"/> /in/wojtowiczmichal</a></p>
-            <p><a href="mailto:michal.wojtowicz@pb.com"><img src="../images/email.svg" class="logoImage" style="width:20px; margin-bottom: -4px;"/> michal.wojtowicz@pb.com</a></p>
+            <p><a href="https://www.linkedin.com/in/wojtowiczmichal/" class="no-shadow"><img src="../images/logos/linkedin.png" class="logoImage" style="width:20px; margin-bottom: -4px;"/> /in/wojtowiczmichal</a></p>
+            <p><a href="mailto:michal.wojtowicz@pb.com" class="no-shadow"><img src="../images/email.svg" class="logoImage" style="width:20px; margin-bottom: -4px;"/> michal.wojtowicz@pb.com</a></p>
         </div>
         <span id="typed"></span>
     </div>
@@ -387,7 +453,7 @@ $ minikube service --namespace zalenium zalenium
 
 	var typed = new Typed('#typed', {
 		stringsElement: '#typed-strings',
-		backDelay: 5000,
+		backDelay: 300000,
         loop: true,
 		showCursor: false,
 		typeSpeed: 50
