Added cost comparison table to k8s selenium grid

--- a/k8s-selenium-grid/index.html
+++ b/k8s-selenium-grid/index.html
@@ -431,6 +431,16 @@ $ minikube service --namespace zalenium zalenium
             </section>
         </section>
 
+        <section>
+            <h2>Summary</h2>
+
+            <ul>
+                <li>setting up Selenium Grid on Kubernetes is not difficult</li>
+                <li>any k8s as-a-service provider can be used</li>
+                <li>using Selenium Grid on Kubernetes <strong>can lead</strong> to costs savings</li>
+            </ul>
+        </section>
+
         <section id="q&a">
             <h1>Questions?</h1>
         </section>
