--- a/k8s-selenium-grid/index.html
+++ b/k8s-selenium-grid/index.html
@@ -435,9 +435,9 @@ $ minikube service --namespace zalenium zalenium
             <h2>Summary</h2>
 
             <ul>
-                <li>setting up Selenium Grid on Kubernetes is not difficult</li>
-                <li>any k8s as-a-service provider can be used</li>
-                <li>using Selenium Grid on Kubernetes <strong>can lead</strong> to costs savings</li>
+                <li class="fragment fade-up">setting up Se Grid on k8s is not difficult</li>
+                <li class="fragment fade-up">any k8s as-a-service provider can be used</li>
+                <li class="fragment fade-up">using SE Grid on k8s <strong>can lead</strong> to costs savings</li>
             </ul>
         </section>
 
