AWS Lambda Functions slides

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
             <ul>
                 <li><a href="aws/pl/">AWS services</a></li>
+                <li><a href="lambda-functions/pl/">AWS Lambda Functions</a></li>
                 <li><a href="docker/">Docker from scratch</a></li>
                 <li><a href="docker&k8s/pl/">Docker & Kubernetes</a></li>
                 <li><a href="js-event-loop/demo">JS Event Loop demos</a></li>
