Management chart slide to lambda-functions

--- a/lambda-functions/pl/index.html
+++ b/lambda-functions/pl/index.html
@@ -137,6 +137,12 @@
                     <li class="fragment fade-up">serverless computing</li>
                 </ul>
             </section>
+            
+            <section>
+                <img src="../images/management-chart.png" class="logoImage">
+                <br/>
+                <a href="https://read.acloud.guru/the-evolution-from-servers-to-functions-21833b576744">&copy; acloud.guru</a>
+            </section>
 
             <section>
                 <h2>Lambda - jak to działa? <img src="../images/logos/lambda-logo.png" class="lambdaLogo"></h2>
@@ -310,7 +316,7 @@
                 <h2>Lambda@Edge 1/2 <img src="../images/logos/lambda-logo.png" class="lambdaLogo"></h2>
 
                 <ul>
-                    <li class="fragment fade-up">tylko nodejs6.10 lub nodejs8.10</li>
+                    <li class="fragment fade-up">tylko nodejs</li>
                     <li class="fragment fade-up">brak dostępu do VPC</li>
                     <li class="fragment fade-up">brak powiązań z innymi kontami AWS</li>
                     <li class="fragment fade-up">brak wsparcia dla env vars</li>
