Added QR code to AWS registration portal

--- a/lambda-functions/pl/index.html
+++ b/lambda-functions/pl/index.html
@@ -59,6 +59,7 @@
         </section>
 
         <section>
+            <h2>Slajdy</h2>
             <img src="qrcodeLink.png" alt="QRcode link" class="qrCodeLink"/>
             <br />
             <a href="http://michailw.github.io/talks/lambda-functions/pl/">http://michailw.github.io/talks/lambda-functions/pl/</a>
@@ -73,6 +74,12 @@
 
         <section>
             <h1>ZACZYNAMY!</h1>
+        </section>
+
+        <section>
+            <h2>Rejestracja w AWS</h2>
+            <img src="../images/signup-aws-qrcode.png" class="qrCodeLink"/>
+            <a href="https://portal.aws.amazon.com/billing/signup" target="_blank" rel="noopener">https://portal.aws.amazon.com/billing/signup</a>
         </section>
 
         <section>
@@ -141,7 +148,7 @@
             <section>
                 <img src="../images/management-chart.png" class="logoImage">
                 <br/>
-                <a href="https://read.acloud.guru/the-evolution-from-servers-to-functions-21833b576744">&copy; acloud.guru</a>
+                <a href="https://read.acloud.guru/the-evolution-from-servers-to-functions-21833b576744" target="_blank" rel="noopener">&copy; acloud.guru</a>
             </section>
 
             <section>
@@ -413,7 +420,7 @@
 
     <div id="typed-container">
         <div id="typed-strings">
-            <p><a href="https://www.linkedin.com/in/wojtowiczmichal/" class="no-shadow"><img src="../../images/logos/linkedin.png" class="logoImage" style="width:20px; margin-bottom: -4px;"/> /in/wojtowiczmichal</a></p>
+            <p><a href="https://www.linkedin.com/in/wojtowiczmichal/" target="_blank" rel="noopener" class="no-shadow"><img src="../../images/logos/linkedin.png" class="logoImage" style="width:20px; margin-bottom: -4px;"/> /in/wojtowiczmichal</a></p>
             <p><a href="mailto:michal.wojtowicz@pb.com" class="no-shadow"><img src="../../images/email.svg" class="logoImage" style="width:20px; margin-bottom: -4px;"/> michal.wojtowicz@pb.com</a></p>
         </div>
         <span id="typed"></span>
