Lambda functions - cold start

--- a/lambda-functions/pl/index.html
+++ b/lambda-functions/pl/index.html
@@ -300,6 +300,21 @@
                 </ul>
             </section>
 
+            <section data-background="../images/coldlambda.jpg">
+                <h1 style="color: #fff;">Cold start</h1>
+            </section>
+
+            <section>
+                <h2>Dealing with cold start</h2>
+
+                <ul>
+                    <li><a href="https://hackernoon.com/cold-starts-in-aws-lambda-f9e3432adbf0">Everything you need to know about cold starts in AWS Lambda</a></li>
+                    <li><a href="https://read.acloud.guru/does-coding-language-memory-or-package-size-affect-cold-starts-of-aws-lambda-a15e26d12c76">How does language, memory and package size affect cold starts of AWS Lambda?</a></li>
+                    <li><a href="https://medium.com/thundra/dealing-with-cold-starts-in-aws-lambda-a5e3aa8f532">Dealing with cold starts in AWS Lambda</a></li>
+                    <li><a href="https://docs.thundra.io/docs/how-to-warmup">How to Warmup</a></li>
+                </ul>
+            </section>
+
             <section>
                 <h2>Lambda - warstwy <img src="../images/logos/lambda-logo.png" class="lambdaLogo"></h2>
 
@@ -346,7 +361,9 @@
                 <h2>API Gateway</h2>
             </section>
 
-            <section data-background="../images/api-gateway.jpeg" data-background-size="contain"></section>
+            <section data-background="../images/New-API-GW-Diagram.png" data-background-size="contain"></section>
+
+            <section data-background="../../aws/images/api-gateway.jpeg" data-background-size="contain"></section>
 
             <section>
                 <h2>API Gateway</h2>
@@ -358,6 +375,15 @@
                     <li class="fragment fade-up">wiele źródeł danych do API</li>
                     <li class="fragment fade-up">możliwość sprzedawania API jako SaaS</li>
                 </ul>
+            </section>
+
+            <section>
+                <h1>$ 1.5 / milion requestów</h1>
+            </section>
+
+            <section>
+                <img src="../images/custom-auth-workflow.png" />
+                <a href="https://docs.aws.amazon.com/apigateway/latest/developerguide/apigateway-use-lambda-authorizer.html">Przykład</a>
             </section>
         </section>
 
@@ -381,7 +407,7 @@
                 </ul>
             </section>
 
-            <section data-background="../images/cloudfront.png" data-background-size="contain"></section>
+            <section data-background="../../aws/images/cloudfront.png" data-background-size="contain"></section>
 
             <section>
                 <h2>CloudFront 2/2</h2>
