Serverless development - JUG Bielsko-Biaa

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li><a href="docker&k8s/pl/">Docker & Kubernetes</a></li>
                 <li><a href="js-event-loop/demo">JS Event Loop demos</a></li>
                 <li><a href="k8s-selenium-grid">Kubernetes Selenium Grid</a></li>
+                <li><a href="serverless-development">Serverless development</a></li>
             </ul>
         </section>
     </div>
